{
    "name": "Get Binding",
    "maps": [
        {
            "name": "Binding Lookup",
            "id": "ae0319af-82d7-492a-b695-636d4916c138",
            "actions": [
                {
                    "name": "Vector2 Lookup",
                    "type": "Value",
                    "id": "73ddf1a5-d7ba-4af6-ba16-a71aa9d11a81",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Float Lookup",
                    "type": "Value",
                    "id": "d8622c79-d30a-48b2-8213-93c17df36080",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d8efc579-5b22-490c-91e1-86ab3d15b5c5",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vector2 Lookup",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "51b6ff96-3466-4365-ad89-9531242fe1bf",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Float Lookup",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}